[workspace]
members = ["std", "descriptors", "psbt", "."]
resolver = "2"

[workspace.package]
version = "0.11.0-beta.2"
keywords = ["bitcoin", "wallet", "descriptors", "psbt", "taproot"]
categories = ["cryptography::cryptocurrencies"]
authors = ["Dr Maxim Orlovsky <orlovsky@lnp-bp.org>"]
homepage = "https://lnp-bp.org"
repository = "https://github.com/BP-WG/bp-wallet"
rust-version = "1.67" # Due to strict encoding library
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
amplify = "4.5.0"
bitcoin_hashes = "0.13.0"  # TODO: Remove and replace with commit_verify
bech32 = "0.9.1"
bp-consensus = "0.11.0-beta.2"
strict_encoding = "2.6.1"
strict_types = "1.6.3"
commit_verify = "0.11.0-beta.1"
bp-dbc = { version = "0.11.0-beta.1" }
bp-seals = { version = "0.11.0-beta.1" }
bp-std = { version = "0.11.0-beta.2", path = "./std" }
descriptors = { version = "0.11.0-beta.2", path = "./descriptors" }
psbt = { version = "0.11.0-beta.2", path = "./psbt" }
indexmap = "2.0.0"
serde_crate = { package = "serde", version = "1", features = ["derive"] }
